# astest

./: CMakeLists.txt  m_ctype.h  main.cpp  misc.cpp  misc.h  qstring.cpp  qstring.h  stdheaders.h  zone.cpp  zone.h
angelscript/projects/msvc2012/: angelscript.vcxproj
angelscript/projects/msvc2012/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  angelscript.lastbuildstate  cl.command.1.tlog  lib.command.1.tlog
angelscript/projects/msvc2015/: angelscript.vcxproj
hal/: platform.cpp  platform.h
posix/: posix_platform.cpp
vc2012/: astest.sln  astest.vcxproj  astest.vcxproj.filters
vc2015/: .gitignore  astest.sln  astest.vcxproj
win32/: w32_platform.cpp
